(Format: Year/Month/Day)
Changes for 0.9.13
*05/05/03:
  * Code cleaning. (Henrik)
    Fluxbox::associateClient; creates tab and
    maps WinClient to label button.
    FbWinFrame.cc, Window.cc/hh
*05/05/02:
  * Added FbTk::Select2nd + more code cleaning (Henrik)
    This returns .second from operator ()(Someclass &a)
    Usefull for std::map loops.
    FbTk/Select2nd.hh, Window.cc, Screen.cc, fluxbox.cc/hh    
  * Cleaning,  (Henrik)
    Create/delete tabs with FbWinFrame::createTab/removeTab
    FbWinFrame.hh/cc, Window.cc
*05/04/30:
  * Fix #1086673 ArrangeWindows on shaded aterms causes inconsistency (Mathias)
    we now place shaded Windows above the normal windows. ArrangeWindows
    touches only windows on the current (xinerama)-head.
    src/WorkspaceCmd.cc
*05/04/29:
  * Added new IconbarModes:  (Mathias)
       NoIcons          - all but iconified windows
       WorkspaceNoIcons - all but iconified windows on the current ws
    IconbarTool.cc/hh nls/fluxbox_nls.hh C/Translation.m
  * Fixed transient bug.  (Henrik)
    #1157361 inconsistent behavior of Java dialogs.
    Transients that are created before the transient_for window
    gets copied to a transient_for waiting list and when the 
    transient_for window is created the transients are updated, 
    When raising a transient window the window gets placed last
    in the transient list so it gets raised last and thus gets 
    places above.
    WinClient.hh/cc, Window.cc    
*05/04/28:
  * Revert Mathias's little change to my patch, and fix it properly :) (Simon)
    FbTk/FbWindow.cc/hh FbWinFrame.cc    
*05/04/27:
  * Fix some initialisation, plus setting background too much (Simon + Mathias)
    FbTk/FbWindow.cc/hh FbWinFrame.cc
  * Add some extremely basic handling for icon pixmaps that aren't
    the same depth as the screen (treat all as 1-bit, easy to handle)
    (Simon)
    FbTk/FbPixmap.hh/cc FbTk/ImageImlib2.cc IconButton.cc
  * Fix a bunch more issues with recent patches (Simon)